--- a/contagem/contagem.html
+++ b/contagem/contagem.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contagem</title>
     <link rel="stylesheet" href="contagem.css">
+    <script src="contagem.js"></script>
 </head>
 <body>
+    <header>
+        <div class="navbar_header">
+            <div class="navbar">
+                <ul>
+                    <li class="navbar_item">
+                        <a href="index.html">CRONOMETRO</a>
+                    </li>
+                    <li class="navbar_item">
+                        <a href="./contagem/contagem.html">CONTADOR</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
     <h1>O Ano Novo é em:</h1>
 
     <div class="contagem">
@@ -28,6 +43,5 @@
             <span>segundos</span>
         </div>
     </div>
-<script src="contagem.js"></script>
 </body>
 </html>
