--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="navbar_header">
+            <div class="navbar">
+                <ul>
+                    <li class="navbar_item">
+                        <a href="index.html">CRONOMETRO</a>
+                    </li>
+                    <li class="navbar_item">
+                        <a href="./contagem/contagem.html">CONTADOR</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
     <div class="cronometro">
         <h1 id='watch'>00:00:00</h1>
         <div class="botoes">
@@ -16,7 +30,6 @@
             <button class="parar" onclick="parar()">PARAR</button>
         </div>
     </div>
-    <a href="./contagem/contagem.html">contagem</a>
     <script src="script.js"></script>
 </body>
 </html>
