--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,7 @@
         </div>
     </header>
     <div class="cronometro">
-        <h1 id='watch'>00:00:00</h1>
+        <h1 id='relogio'>00:00:00</h1>
         <div class="botoes">
             <button class="iniciar" onclick="iniciar()">INICIAR</button>
             <button class="pausar" onclick="pausar()">PAUSAR</button>
