--- a/contagem/contagem.html
+++ b/contagem/contagem.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contagem</title>
     <link rel="stylesheet" href="contagem.css">
-    <script src="contagem.js"></script>
 </head>
 <body>
     <header>
@@ -23,25 +22,28 @@
             </div>
         </div>
     </header>
-    <h1>O Ano Novo é em:</h1>
+    <h1>Contagem Regressiva:</h1>
+    <h2>ANO NOVO</h2>
 
     <div class="contagem">
-        <div class="num days-c">
-            <p class="dias">0</p>
-            <span>dias</span>
+        <div class="div-contagem">
+            <span class="dias" id="dia"></span>
+            <div class="smalltext">DIAS</div>
         </div>
-        <div class="num horas-c">
-            <p class="horas">0</p>
-            <span>horas</span>
+        <div class="div-contagem">
+            <span class="horas" id="hora"></span>
+            <div class="smalltext">HORAS</div>
         </div>
-        <div class="num mins-c">
-            <p class="minutos">0</p>
-            <span>minutos</span>
+        <div class="div-contagem">
+            <span class="minutos" id="minuto"></span>
+            <div class="smalltext">MINUTOS</div>
         </div>
-        <div class="num seconds-c">
-            <p class="segundos">0</p>
-            <span>segundos</span>
+        <div class="div-contagem">
+            <span class="segundos" id="segundo"></span>
+            <div class="smalltext">SEGUNDOS</div>
         </div>
     </div>
+  
+<script src="contagem.js"></script>
 </body>
 </html>
