--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div class="navbar">
                 <ul>
                     <li class="navbar_item">
-                        <a href="index.html">CRONOMETRO</a>
+                        <a href="#">CRONOMETRO</a>
                     </li>
                     <li class="navbar_item">
-                        <a href="./contagem/contagem.html">CONTADOR</a>
+                        <a href="contagem.html">CONTADOR</a>
                     </li>
                 </ul>
             </div>
