--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     <li class="navbar_item">
                         <a href="contagem.html">CONTADOR</a>
                     </li>
+                    <li class="navbar_item">
+                        <a href="Alarme/alarme.html">ALARME</a>
+                    </li>
                 </ul>
             </div>
         </div>
