--- a/contagem.html
+++ b/contagem.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <h1>Contagem Regressiva:</h1>
-        <form name="data">
+        <form name="form_main">
             <label for="numero">SELECIONE UMA DATA:</label>
             <input name='date_end' type="date" onblur="resetCountdown()" />
             <br>
