--- a/alarme.html
+++ b/alarme.html
@@ -9,22 +9,15 @@
 </head>
 <body>
     <header>
-        <div class="navbar_header">
-            <div class="navbar">
-                <ul>
-                    <li class="navbar_item">
-                        <a href="#">CRONOMETRO</a>
-                    </li>
-                    <li class="navbar_item">
-                        <a href="contador.html">CONTADOR</a>
-                    </li>
-                    <li class="navbar_item">
-                        <a href="alarme.html">ALARME</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        <nav id="menu">
+            <ul>
+                <li><a href="cronometro.html">CRONOMETRO</a></li>   
+                <li><a href="contador.html">CONTADOR</a></li>                
+                <li><a href="alarme.html">ALARME</a></li>
+            </ul>
+        </nav>
     </header>
+    
     <div class="container">
         <div class="alarm-container">
             <img src="images/alarm-1673577_1280.png" class="alarm-img" alt="">
