--- a/contador.html
+++ b/contador.html
@@ -9,22 +9,15 @@
 </head>
 <body>
     <header>
-        <div class="navbar_header">
-            <div class="navbar">
-                <ul>
-                    <li class="navbar_item">
-                        <a href="cronometro.html">CRONOMETRO</a>
-                    </li>
-                    <li class="navbar_item">
-                        <a href="contagem.html">CONTADOR</a>
-                    </li>
-                    <li class="navbar_item">
-                        <a href="alarme.html">ALARME</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        <nav id="menu">
+            <ul>
+                <li><a href="cronometro.html">CRONOMETRO</a></li>   
+                <li><a href="contador.html">CONTADOR</a></li>                
+                <li><a href="alarme.html">ALARME</a></li>
+            </ul>
+        </nav>
     </header>
+
     <h1>Contagem Regressiva:</h1>
         <form name="form_main">
             <label for="numero">SELECIONE UMA DATA:</label>
