--- a/cronometro.html
+++ b/cronometro.html
@@ -4,26 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cronometro</title>
     <link rel="stylesheet" href="cronometro.css">
+    <title>Cronometro</title>
 </head>
 <body>
     <header>
-        <div class="navbar_header">
-            <div class="navbar">
-                <ul>
-                    <li class="navbar_item">
-                        <a href="#">CRONOMETRO</a>
-                    </li>
-                    <li class="navbar_item">
-                        <a href="contador.html">CONTADOR</a>
-                    </li>
-                    <li class="navbar_item">
-                        <a href="alarme.html">ALARME</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        <nav id="menu">
+            <ul>
+                <li><a href="#">CRONOMETRO</a></li>   
+                <li><a href="contador.html">CONTADOR</a></li>                
+                <li><a href="alarme.html">ALARME</a></li>
+            </ul>
+        </nav>
     </header>
     <div class="cronometro">
         <h1 id='relogio'>00:00:00</h1>
