--- a/cronometro.html
+++ b/cronometro.html
@@ -11,7 +11,7 @@
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="#">CRONOMETRO</a></li>   
+                <li><a href="#">CRONÔMETRO</a></li>   
                 <li><a href="contador.html">CONTADOR</a></li>                
                 <li><a href="alarme.html">ALARME</a></li>
             </ul>
