--- a/alarme.html
+++ b/alarme.html
@@ -11,7 +11,7 @@
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="cronometro.html">CRONOMETRO</a></li>   
+                <li><a href="cronometro.html">CRONÔMETRO</a></li>   
                 <li><a href="contador.html">CONTADOR</a></li>                
                 <li><a href="alarme.html">ALARME</a></li>
             </ul>
