--- a/contador.html
+++ b/contador.html
@@ -21,10 +21,12 @@
     <h1>Contagem Regressiva:</h1>
         <form name="form_main">
             <label for="numero">SELECIONE UMA DATA:</label>
-            <input name='date_end' type="date" onblur="resetCountdown()" />
+            <input name='date_end' type="date" onblur="resetCountdown()"/>
             <br>
+            <br>
+            <p>DEPOIS DE SELECIONAR A DATA, <i><u>CLIQUE NA TELA!</u></i></p>
         </form>
-        <br>
+        
         <br>
 
     <div class="contagem">
