--- a/cronometro.html
+++ b/cronometro.html
@@ -11,6 +11,7 @@
     <header>
         <nav id="menu">
             <ul>
+                <li><a href="index.html">HOME</a></li>                
                 <li><a href="#">CRONÔMETRO</a></li>   
                 <li><a href="contador.html">CONTADOR</a></li>                
                 <li><a href="alarme.html">ALARME</a></li>
@@ -19,12 +20,13 @@
     </header>
     <div class="cronometro">
         <h1 id='relogio'>00:00:00</h1>
+    </div>
         <div class="botoes">
             <button class="iniciar" onclick="iniciar()">INICIAR</button>
             <button class="pausar" onclick="pausar()">PAUSAR</button>
             <button class="parar" onclick="parar()">PARAR</button>
         </div>
-    </div>
+    
     <script src="cronometro.js"></script>
 </body>
 </html>
