--- a/contador.html
+++ b/contador.html
@@ -11,6 +11,7 @@
     <header>
         <nav id="menu">
             <ul>
+                <li><a href="index.html">HOME</a></li>                
                 <li><a href="cronometro.html">CRONÔMETRO</a></li>   
                 <li><a href="contador.html">CONTADOR</a></li>                
                 <li><a href="alarme.html">ALARME</a></li>
