--- a/index.html
+++ b/index.html
@@ -19,30 +19,33 @@
         <h3>SELECIONE A FERRAMENTA QUE DESEJA USAR:</h3>     
     </header>
     <main>
-      <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="row row-cols-1 row-cols-md-1 g-4 m-3 row-cols-md-3">
         <div class="col">
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <img src="images/cronometro.png" class="card-img-top" alt="...">
             <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">CRONÔMETRO</h5>
+              <a href="cronometro.html" class="btn btn-primary">VÁ PARA A PÁGINA</a>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="images/contador.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="col">
+          <div class="card">
+            <img src="images/contador.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">CONTADOR</h5>
+              <a href="contador.html" class="btn btn-primary">VÁ PARA A PÁGINA</a>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="images/alarme.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="col">
+          <div class="card">
+            <img src="images/alarme.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">ALARME</h5>
+              <a href="alarme.html" class="btn btn-primary">VÁ PARA A PÁGINA</a>
+            </div>
+          </div>
         </div>
       </div>
     </main>
