ajustes de responsividade

--- a/alarme.html
+++ b/alarme.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="alarme.css">
-    <title>ALARME</title>
+    <title>FERRAMENTAS DE TEMPO</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </header>
-    
+ 
     <div class="container">
         <div class="alarm-container">
             <img src="images/alarm-1673577_1280.png" class="alarm-img" alt="">
