--- a/contador.html
+++ b/contador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contagem</title>
+    <title>FERRAMENTAS DE TEMPO</title>
     <link rel="stylesheet" href="contador.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </header>
-
+<div class="container">
     <h1>Contagem Regressiva:</h1>
         <form name="form_main">
             <label for="numero">SELECIONE UMA DATA:</label>
@@ -48,7 +48,7 @@
             <div class="smalltext">SEGUNDOS</div>
         </div>
     </div>
-  
+</div> 
 <script src="contador.js"></script>
 </body>
 </html>
