--- a/cronometro.html
+++ b/cronometro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cronometro.css">
-    <title>Cronometro</title>
+    <title>FERRAMENTAS DE TEMPO</title>
 </head>
 <body>
     <header>
