--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="images/contador.png" class="card-img-top" alt="...">
+            <img src="images/contagem.PNG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">CONTADOR</h5>
               <a href="contador.html" class="btn btn-primary">VÁ PARA A PÁGINA</a>
