--- a/contador.html
+++ b/contador.html
@@ -13,19 +13,19 @@
             <ul>
                 <li><a href="index.html">HOME</a></li>                
                 <li><a href="cronometro.html">CRONÔMETRO</a></li>   
-                <li><a href="contador.html">CONTADOR</a></li>                
+                <li><a href="contador.html">CONTAGEM</a></li>                
                 <li><a href="alarme.html">ALARME</a></li>
             </ul>
         </nav>
     </header>
 <div class="container">
-    <h1>Contagem Regressiva:</h1>
+    <h1>Contagem Regressiva</h1>
         <form name="form_main">
             <label for="numero">SELECIONE UMA DATA:</label>
             <input name='date_end' type="date" onblur="resetCountdown()"/>
             <br>
             <br>
-            <p>DEPOIS DE SELECIONAR A DATA, <i><u>CLIQUE NA TELA!</u></i></p>
+            <p>DEPOIS DE SELECIONAR A DATA, <b><u style="font-size: 27px;">CLIQUE NA TELA!</u></b></p>
         </form>
         
         <br>
