--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -15,8 +15,8 @@
         <h1>FERRAMENTAS DE TEMPO</h1>
         <br>
         <h2>PROTEJO CRIADO PARA A FACILITAÇÃO DA GESTÃO DO SEU TEMPO</h2>
-        <br>
-        <h3>SELECIONE A FERRAMENTA QUE DESEJA USAR:</h3>     
+        <br><br>
+        <h3><b><u>SELECIONE A FERRAMENTA QUE DESEJA USAR:</u></b></h3>     
     </header>
     <main>
       <div class="row row-cols-1 row-cols-md-1 g-4 m-3 row-cols-md-3">
@@ -25,7 +25,7 @@
             <img src="images/cronometro.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">CRONÔMETRO</h5>
-              <a href="cronometro.html" class="btn btn-primary">VÁ PARA A PÁGINA</a>
+              <a href="cronometro.html" class="btn btn-primary">CLIQUE AQUI</a>
             </div>
           </div>
         </div>
@@ -33,8 +33,8 @@
           <div class="card">
             <img src="images/contagem.PNG" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">CONTADOR</h5>
-              <a href="contador.html" class="btn btn-primary">VÁ PARA A PÁGINA</a>
+              <h5 class="card-title">CONTAGEM REGRESSIVA</h5>
+              <a href="contador.html" class="btn btn-primary">CLIQUE AQUI</a>
             </div>
           </div>
         </div>
@@ -43,7 +43,7 @@
             <img src="images/alarme.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">ALARME</h5>
-              <a href="alarme.html" class="btn btn-primary">VÁ PARA A PÁGINA</a>
+              <a href="alarme.html" class="btn btn-primary">CLIQUE AQUI</a>
             </div>
           </div>
         </div>
