--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>FERRAMENTAS DE TEMPO</h1>
         <br>
-        <h2>PROTEJO CRIADO PARA A FACILITAÇÃO DA GESTÃO DO SEU TEMPO</h2>
+        <h2>PROJETO CRIADO PARA A FACILITAÇÃO DA GESTÃO DO SEU TEMPO</h2>
         <br><br>
         <h3><b><u>SELECIONE A FERRAMENTA QUE DESEJA USAR:</u></b></h3>     
     </header>
